components/devfile-node-app/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: test-application
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: devfile-node-app
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eldevfile-node-app
  namespace: karthik
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-devfile-node-app
    weight: null
status: {}
